fix menu texture color format, add sub menu

--- a/3dplatformer/3dplatformer.vcxproj
+++ b/3dplatformer/3dplatformer.vcxproj
@@ -189,6 +189,8 @@
     <None Include="packages.config" />
     <None Include="shaders\2d\fragment.shader" />
     <None Include="sounds\click.ogg" />
+    <None Include="sub_menu_script.lua" />
+    <None Include="test_sub_menu.json" />
     <None Include="test_menu.json" />
     <None Include="shaders\2d\vertex.shader" />
     <None Include="shaders\basic\fragment.shader" />
