--- a/sandbox/sandbox.vcxproj.filters
+++ b/sandbox/sandbox.vcxproj.filters
@@ -53,4 +53,12 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="steam_appid.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\test_texture.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
