--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third-party/json"]
 	path = third-party/json
 	url = https://github.com/nlohmann/json
+[submodule "yaml/yaml-cpp"]
+	path = yaml/yaml-cpp
+	url = https://github.com/jbeder/yaml-cpp
